--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3>What is the capital of India?</h3>
+	<input type="radio" name="capital" value="newdelhi">New Delhi<br>
+	<input type="radio" name="capital" value="Mumbai">Mumbai
+
+	<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
