--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<input type="radio" name="capital" value="newdelhi">New Delhi<br>
 	<input type="radio" name="capital" value="Mumbai">Mumbai
 
-	<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	<blockquote cite="www.wikipedia.com">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
